update the single page UI and add more detailed JS function for SPA

--- a/app/assets/stylesheets/spa.less
+++ b/app/assets/stylesheets/spa.less
@@ -1,1 +1,15 @@
 @import "utils/_common.less";
+
+[data-state=logged-in][hidden] {
+  display: none;
+}
+
+form#search,
+form#new-message {
+  margin-bottom: 10px;
+}
+
+textarea[name=post] {
+  margin-bottom: 5px;
+  height: 100px;
+}
