--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,6 +26,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" data-action="navigate" data-action-url="@routes.Application.index()"><i class="glyphicon glyphicon-home"></i> Home</a></li>
+                        <li><a href="#" data-action="navigate" data-action-url="@routes.SinglePage.index()"><i class="glyphicon glyphicon-transfer"></i> SPA</a></li>
                         @if(session != null) {
                             <li><a href="#" data-action="navigate" data-action-url="@routes.Profile.index()"><i class="glyphicon glyphicon-bullhorn"></i> Post</a></li>
                         }
