--- a/app/views/singlepage.scala.html
+++ b/app/views/singlepage.scala.html
@@ -2,7 +2,17 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/spa.css")">
+
+        <script src='@routes.Assets.at("lib/jquery/jquery.min.js")' ></script>
+        <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.js")' ></script>
+        <script src='@routes.Assets.at("lib/momentjs/moment.js")'></script>
+        <script src='@routes.Assets.at("lib/react/react.js")'></script>
+        <script type='text/javascript' src='@routes.Reverse.jsRoutes'></script>
+
+        <script src='@routes.Assets.at("javascripts/spa.js")' defer></script>
+
     </head>
     <body>
         <div>
@@ -15,46 +25,50 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/">parrote <span class="small">(spa)</span></a>
+                        <a class="navbar-brand" href="@routes.SinglePage.index()">parrote <span class="small">(spa)</span></a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="@routes.Application.index()" data-action="navigate"><i class="glyphicon glyphicon-home"></i>
+                                Home</a>
+                            </li>
+                        </ul>
+                   
+                        @helper.form(routes.Secure.logout(), 'hidden -> "hidden", 'id -> "logout-form") {
+                            <input type="hidden" name="source" value="spa">
+                        }
+
                         <ul class="nav navbar-nav pull-right">
-                            <form class="form-group navbar-form navbar-right" role="search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search">
-                                    <span class="input-group-btn">
-                                        <button id="search-button" type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-                                    </span>
-                                </div>
-                            </form>
+                            <li>
+                                <a id="logout" href="#" data-state="logged-in" hidden>Logout</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
         <div id="content" class="container">
-
-                <!-- TODO: Check if logged in -->
-
-            <div class="form-group">
-                <div class="col-sm-3"></div>
-                <form id="post-form" class="col-sm-6">
-                    <label>Post</label>
-                    <textarea class="form-control" name="post"></textarea>
-                    <button class="btn btn-primary pull-right">Post <i class="glyphicon glyphicon-bullhorn"></i></button>
+            <div class="form-group row">
+                <div class="col-sm-4"></div>
+                <form id="search" class="col-sm-4">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-btn">
+                            <button id="search-button" type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                        </span>
+                    </div>
                 </form>
-                <div class="col-sm-3"></div>
+                <div class="col-sm-4">
+                    <form id="new-message" data-state="logged-in" hidden>
+                        <textarea class="form-control" name="post" placeholder="Say something..."></textarea>
+                        <button class="btn btn-primary pull-right">Post <i class="glyphicon glyphicon-bullhorn"></i></button>
+                    </form>
+                </div>
             </div>
 
-                <!-- TODO: React loading of messagess -->
+                <!-- TODO: React loading of messages -->
 
         </div>
-        <script src='@routes.Assets.at("lib/jquery/jquery.min.js")' ></script>
-        <script src='@routes.Assets.at("lib/bootstrap/js/bootstrap.js")' ></script>
-        <script src='@routes.Assets.at("moment.js")'></script>
-        <script src='@routes.Assets.at("lib/react/react.js")'></script>
-        <script type='text/javascript' src='@routes.Reverse.jsRoutes'></script>
-        <script src='@routes.Assets.at("javascripts/spa.js")'></script>
-        @*<script src="@routes.Assets.at("javascripts/bonmot.js")" ></script>*@
+
     </body>
 </html>
